# penny-finder-backend

./: .gitignore  COUPON_TIERS.md  README.md  aggregator.py  app-store-metadata.md  categorize_client.py  confidence.py  cross_verify.py  headline.py  heat.py  main.py  pyproject.toml  schema.py
.github/workflows/: daily-digest.yml  daily.yml  hourly.yml  push-dispatch.yml
briefings/: 2026-W18.json
circulars/: README.md
landing/: README.md  index.html  privacy.html  site.css  terms.html  vercel.json
scrapers/: __init__.py  _base.py  _rss_common.py  barnes_noble.py  camelcamel.py  coupons_com.py  cvs.py  dg_coupons.py  dollar_general.py  flipp.py  freebie_guy.py  home_depot.py  kcl.py  kroger.py  lowes.py  meijer.py  menards.py  pdf_weekly_ad.py  penny_pages.py  penny_pinchin.py  playwright_tfg.py  reddit_penny.py  slickdeals.py  target.py  walgreens.py  walmart_html.py  weekly_circulars.py
scripts/: fetch_walmart.bat  fetch_walmart.py  post_digest.py  run_local_pipeline.bat
supabase/: pair_sync_rls_v2.sql  pair_sync_schema.sql  push_tokens_schema.sql  security_hardening_v3.sql
supabase/functions/_shared/: anthropic.ts  rate_limit_inline.md
supabase/functions/besttime/: index.ts
supabase/functions/briefing/: index.ts
supabase/functions/categorize/: index.ts
supabase/functions/dispatch-push/: index.ts
tests/: conftest.py  test_aggregator.py  test_confidence.py  test_cross_verify.py  test_heat_headline.py  test_rss_parser.py  test_schema.py  test_scrapers_fixtures.py
tests/fixtures/: dollar_general_sample.html  meijer_sample.html  target_sample.html
(+6 files in other folders)
